# auto_login_fortigate

./: Cargo.toml  README.md
src/: cli_parser.rs  get_pass.rs  lib.rs  login.rs  main.rs  setup_chrome_driver.rs  warp_control.rs
