[package]
name = "auto_login"
version = "0.1.0"
edition = "2021"
description = "Fortigate autologin"
readme = "README.md"
license = "MIT"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3 
overflow-checks = false
debug = 0
strip = true

[dependencies]
thirtyfour="*"
tokio = { version = "*", features = ["full"] }
curl = "*"
